# qamuy-lite

./: README.md
.github/workflows/: deploy-worker.yaml  pytest.yml
ql-worker/: Dockerfile  README.md  client.py  docker-compose.yml  example.json  post.sh  post_local.sh  pyproject.toml  vqe_example.json
ql-worker/ql_worker/: main.py
ql-worker/ql_worker/calc/: calculation.py
ql-worker/ql_worker/common/: job.py  model.py  molecule.py
ql-worker/ql_worker/tests/test_calc/: test_calculation.py
ql-worker/ql_worker/vqe/: executor.py  model.py
